--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Copy this file to .env and fill in your values
 
 # API Configuration
-VITE_API_URL=http://localhost:3001/api
+VITE_API_URL=https://plan-etude.koyeb.app/api
 
 # Development Settings
 VITE_DEV_MODE=false
