--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.91.2",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0",
     "socket.io-client": "^4.8.3",
+    "tailwind-merge": "^3.4.0",
     "vconsole": "^3.15.1"
   },
   "devDependencies": {
